nav completa-ore 13:00

--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header>
+        <nav class="top-bar clearfix">
+            <ul class="logo part fl">
+                <li><img class="drop-logo" src="img/logo-small.png" alt=""></li>
+            </ul>
+
+            <ul class="question part fl">
+                <li>Perchè Dropbox?</li>
+                <li>Funzioni</li>
+                <li>Piani e prezzi</li>
+            </ul>
+
+            <ul class="login part fl">
+                <li>Supporto</li>
+                <li>Contatta l'ufficio vendite</li>
+                <li>Accedi</li>
+                <li><button class="button start">Inizia</button></li>
+            </ul>
+        </nav>
+
+
+        <div class="container">
+
+        </div>
+
+
+    </header>
     
 </body>
 </html>
