--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Start Header -->
     <header>
-        
+
         <nav class="top-bar clearfix">
             <ul class="logo part fl">
                 <li><img class="drop-logo" src="img/logo-small.png" alt=""></li>
@@ -54,6 +54,20 @@
 
     </header>
     <!-- Finish Header -->
+
+    <main>
+
+        <div class="box dropbox-business clearfix">
+            <div class="title-dropbox"></div>
+
+            <div class="section rt fl"></div>
+                 <div class="itemp"></div>
+
+            <div class="section centr fl"></div>
+            <div class="section lf fl"></div>
+
+        </div>
+    </main>
 
 
     
