--- a/index.html
+++ b/index.html
@@ -58,15 +58,29 @@
     <main>
 
         <div class="box dropbox-business clearfix">
-            <div class="title-dropbox"></div>
+            
+            <div class="title-dropbox">
+                <h2></h2> 
+            </div>
 
-            <div class="section rt fl"></div>
-                 <div class="itemp"></div>
+            <div class="section lf fl">
+                <div class="itemp"></div>
+            </div>
+            
+            <div class="section centr fl">
+                <div class="itemp"></div>
+            </div>
 
-            <div class="section centr fl"></div>
-            <div class="section lf fl"></div>
+            <div class="section rt fl" >
+                <div class="itemp"></div>
+            </div> 
+
+            <div class="enterprise-contact fl">
+
+            </div>
 
         </div>
+
     </main>
 
 
