--- a/index.html
+++ b/index.html
@@ -244,19 +244,75 @@
         </div>
 
 
-    <div class="box dropbox clearfix">
-        <div class="titl-operations">
-            <h2>Esegui più operazioni con Dropbox Business</h2>
+        <div class="box dropbox clearfix">
+            <div class="titl-operations">
+                <h2>Esegui più operazioni con Dropbox Business</h2>
+            </div>
+
+            <div class="actions fl">
+                <div class="picture-actions">
+                    <img src="img/business-feature-switching-tools.png" alt="">
+                </div>
+                <div class="explain-actions" >
+                    <h2>Passa di meno da un caso all'altro troppo in fretta</h2><br>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </div>
+            </div>
+
+            <div class="actions centr fl">
+                <div class="picture-actions">
+                    <img src="img/business-feature-coordinate-it.png" alt="">
+                </div>
+                <div class="explain-actions">
+                    <h2>Passa di meno da un caso all'altro troppo in fretta</h2><br>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </div>
+            </div>
+
+            <div class="actions fl">
+                <div class="picture-actions">
+                    <img src="img/business-feature-multi-device.png" alt="">
+                </div>
+                <div class="explain-actions">
+                    <h2>Passa di meno da un caso all'altro troppo in fretta</h2><br>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </div>
+            </div>
+
+            <div class="actions fl">
+                <div class="picture-actions">
+                    <img src="img/business-feature-integrations-it.png" alt="">
+                </div>
+                <div class="explain-actions">
+                    <h2>Passa di meno da un caso all'altro troppo in fretta</h2><br>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
+            </div>
+
+            <div class="actions centr fl">
+                <div class="picture-actions">
+                    <img src="img/business-feature-send-files-it.png" alt="">
+                </div>
+                <div class="explain-actions">
+                    <h2>Passa di meno da un caso all'altro troppo in fretta</h2><br>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </div>
+            </div>
+
+            <div class="actions fl">
+                <div class="picture-actions">
+                    <img src="img/business-feature-security.png" alt="">
+                </div>
+                <div class="explain-actions">
+                    <h2>Passa di meno da un caso all'altro troppo in fretta</h2><br>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </div>
+            </div>
         </div>
 
-        <div class="actions fl"></div>
-        <div class="actions centr fl"></div>
-        <div class="actions fl"></div>
-        <div class="actions fl"></div>
-        <div class="actions centr fl"></div>
-        <div class="actions fl"></div>
+        <div>
 
-    </div>
+        </div>
 
 
 
