griglia colorata finita

--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
         </div>
 
 
+        <!-- box with 6 floats (picture+text) -->
         <div class="box dropbox clearfix">
             <div class="titl-operations">
                 <h2>Esegui più operazioni con Dropbox Business</h2>
@@ -286,7 +287,7 @@
                 <div class="explain-actions">
                     <h2>Passa di meno da un caso all'altro troppo in fretta</h2><br>
                     <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
-                    </div>
+                </div>
             </div>
 
             <div class="actions centr fl">
@@ -310,9 +311,92 @@
             </div>
         </div>
 
-        <div>
+        <!-- box with title + link -->
+        <div class="box dropbox team">
+            <div>
+                <h1>Più di 500.000 mila team <br> utilizzano Dropbox Business</h1>
+            </div>
+            <span><a href="">Scopri di più sui nostri clienti</a></span>        
+        </div>
+
+
+        <!-- Box Grid colored floats -->
+        <div class="box-griglia clearfix">
+
+            <div class="square-logo fl clearfix">
+
+                <div class="brand-logo designit fl">
+                    <div class="brand-logo-picture">
+                        <img src="img/designit.svg" alt="">
+                    </div>
+                </div>
+
+                <div class="brand-logo Asu fl">
+                    <div class="brand-logo-picture asu">
+                        <img src="img/arizona_state_university.svg" alt="">
+                    </div>
+                </div>
+                <div class="brand-logo UF fl">
+                    <div class="brand-logo-picture">
+                        <img src="img/university_of_florida.svg" alt="">
+                    </div>
+                </div>
+                <div class="brand-logo Topps fl">
+                    <div class="brand-logo-picture">
+                        <img src="img/topps.svg" alt="">
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="square-logo quote fl">
+
+                <div class="brand-picture-quote">
+                    <img src="img/clear_channel.svg" alt="">
+                </div>
+                <hr>
+
+                <div class="paragraph-quote">
+                    <p>Ci impegniamo a creare un ambiente di lavoro di livello superiore, utilizzando le migliori tecnologie disponibili. Con Dropbox abbiamo ottenuto un ritorno sull'investimento oltre al 500%, compiendo passi da gigante per modernizzare la nostra strategia a livello IT e migliorare la collaborazione all'interno dell'azienda.”</p>
+                </div>
+                <p class="quote-name">Daniel Jiménez, Head of Mobile Product & Design</p>
+                
+            </div>
+
+
+            <div class="square-logo fl">
+                <div class="brand-logo world-bicycle fl">
+                    <div class="brand-logo-picture">
+                        <img src="img/world_bicycle_relief.svg" alt="">
+                    </div>
+                </div>
+                <div class="brand-logo hearst fl">
+                    <div class="brand-logo-picture">
+                        <img src="img/hearst_corp.svg" alt="">
+                    </div>
+                </div>
+                <div class="brand-logo lonley-planet fl">
+                    <div class="brand-logo-picture">
+                        <img src="img/lonely_planet.svg" alt="">
+                    </div>
+                </div>
+                <div class="brand-logo clear-channel fl">
+                    <div class="brand-logo-picture">
+                        <img src="img/clear_channel.svg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="box-azienda clearfix">
+            <div class="azienda-part one fl"></div>
+            <div class="azienda-part two  fl"></div>
 
         </div>
+
+
+
 
 
 
