footer snza ultima icona

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li>Supporto</li>
                 <li>Contatta l'ufficio vendite</li>
                 <li>Accedi</li>
-                <li><button class="button start">Inizia</button></li>
+                <li><a href="https://www.youtube.com/"> <button class="button start">Inizia</button></a></li>
             </ul>
         </nav>
         <!-- Finish Nav -->
@@ -388,21 +388,93 @@
             </div>
         </div>
 
+        <!--  -->
+        <div class="box-azienda">
+            <div class="box-azienda-inside clearfix">
 
-        <div class="box-azienda clearfix">
-            <div class="azienda-part one fl"></div>
-            <div class="azienda-part two  fl"></div>
+                <div class="azienda-part one fl">
+                    <h2>Porta Dropbox Business nella tua azienda</h2>
+                </div>
 
+                <div class="azienda-part two  fl">
+                    <a href=""><button>Iniza la tua prova gratuita</button></a>
+                </div>
+            </div>
         </div>
 
 
-
-
-
-
+        <!--  -->
+        <div class="box dropbox questions">
+            <div class="questions-title"><h2>Domande frequenti</h2></div>
+            <div class="questions-line">Quanto spazio riceve il mio team?</div>
+            <div class="questions-line">Quanto spazio riceve il mio team?</div>
+            <div class="questions-line">Quanto spazio riceve il mio team?</div>
+            <div class="questions-line">Quanto spazio riceve il mio team?</div>
+        </div>
     </main>
 
+    <!-- footer menu -->
+    <footer>
+        <div class="footer-color">
+            <div class="box dropbox clearfix bottom-menu">
+                <div class="bottom-menu column fl">
+                    <h3>Dropbox</h3>
+                    <ul class="column-list">
+                        <li>Applicazione desktop</li>
+                        <li>App mobili</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
 
-    
+                <div class="bottom-menu column fl">
+                    <h3>Azienda</h3>
+                    <ul class="column-list">
+                        <li>Informazioni su Dropbox</li>
+                        <li>Lavora con noi</li>
+                        <li>Dicono di noi</li>
+                        <li>Relazioni con gli investitori</li>
+                        <li>Blog</li>
+                    </ul>
+                </div>
+
+                <div class="bottom-menu column fl">
+                    <h3>Supporto</h3>
+                    <ul class="column-list">
+                        <li>Centro assistenza</li>
+                        <li>Contattaci</li>
+                        <li>Cookie</li>
+                        <li>Privacy e Termini</li>
+                        <li>Mappa del sito</li>
+                    </ul>
+                </div>
+
+                <div class="bottom-menu column fl">
+                    <h3>Community</h3>
+                    <ul class="column-list">
+                        <li>Sviluppatori</li>
+                        <li>Referral</li>
+                        <li>Forum</li>
+                    </ul>
+                </div>
+
+                <div class="bottom-menu column fl">
+                    <h3>Prodotti</h3>
+                    <ul class="column-list">
+                        <li>Plus</li>
+                        <li>Family</li>
+                        <li>Professional</li>
+                        <li>Dropbox Enterprise</li>
+                        <li>Dropbox Professional</li>
+                    </ul>
+                </div>
+
+                <hr>
+
+            </div>
+        </div>
+
+    </footer>
 </body>
 </html>
