refactoring in corso

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
 
         <nav class="top-bar clearfix">
             <ul class="logo part fl">
-                <li><img class="drop-logo" src="img/logo-small.png" alt=""></li>
+                <li><a href=""><img class="drop-logo" src="img/logo-small.png" alt=""></a></li>
             </ul>
 
             <ul class="question part fl">
-                <li>Perchè Dropbox?</li>
-                <li>Funzioni</li>
-                <li>Piani e prezzi</li>
+                <li><a href="">Perchè Dropbox?</a></li>
+                <li><a href="">Funzioni</a></li>
+                <li><a href=""></a>Piani e prezzi</a></li>
             </ul>
 
             <ul class="login part fl">
-                <li>Supporto</li>
-                <li>Contatta l'ufficio vendite</li>
-                <li>Accedi</li>
-                <li><a href="https://www.youtube.com/"> <button class="button start">Inizia</button></a></li>
+                <li><a href=""></a>Supporto</a></li>
+                <li><a href=""></a>Contatta l'ufficio vendite</a></li>
+                <li><a href=""></a>Accedi</a></li>
+                <li><a href=""><button class="button start">Inizia</button></a></li>
             </ul>
         </nav>
         <!-- Finish Nav -->
@@ -43,7 +43,7 @@
                 <div class="-2 fl-header">Finalmente tutti i tuoi strumenti,contenuti e collaboratori sono accessibili dallo stesso posto.Dropbox Business è molto più di un semplice spazio per l’archiviazione sicura dei file: è un'area di lavoro intelligente che riunisce team, strumenti e contenuti.</div>
                 <button class="button free-test">Inizia la tua prova gratuita</button><br>
                 <span class="-2 fl-after">Annulla in qualsiasi momento</span><br>
-                <button class="arrow">&#x2193;</button> 
+                <a href=""><button class="arrow">&#x2193;</button> </a>
             </div>
             
             <div class="picture-container fl">
@@ -75,7 +75,8 @@
             <div class="section lf fl">
                 <div class="itemp">
                     <div class="singolo intern ">
-                        <h4>Singolo</h4>
+                        <img src="https://cfl.dropboxstatic.com/static/images/business/bermuda/icons/team.svg" alt=""> 
+                        <span>Singolo</span>
                     </div>
 
                     <div class="contenuto">
@@ -88,15 +89,25 @@
 
                         <div>
                             <ul class="price">                                                       
-                                <li>1 utente</li>
-                                <li>3 TB di spazio di archiviazione sicuro</li>
+                                <li>
+                                    <span>
+                                        <img src="https://cfl.dropboxstatic.com/static/images/business/bermuda/icons/team.svg" alt="">
+                                    </span>
+                                    1 utente
+                                </li>
+                                <li>
+                                    <span>
+                                        <img src="https://cfl.dropboxstatic.com/static/images/business/bermuda/icons/chat-bubble.svg" alt="">
+                                    </span>
+                                    3 TB di spazio di archiviazione sicuro
+                                </li>
                                 <li><span>&#x270E;</span> Funzioni di produttività premium e condivisione file semplice e sicura</li>
                             </ul>
                         </div>
 
 
                         <div class="test-days">
-                            <button class="button free-test days-30">Prova gratis per 30 giorni</button>
+                            <a href=""><button class="button free-test days-30">Prova gratis per 30 giorni</button></a>
                             <span>oppure <a href="">acquista ora</a></span>
                         </div>
                         <hr>
@@ -121,7 +132,8 @@
             <div class="section centr fl">
                 <div class="itemp">
                     <div class="team intern">
-                        <h4>Team</h4>
+                        <img src="https://cfl.dropboxstatic.com/static/images/business/bermuda/icons/black-star.svg" alt="">
+                        <span>Team</span>
                     </div>
 
                     <div class="contenuto">
@@ -134,14 +146,24 @@
 
                         <div>
                             <ul class="price">                                                       
-                                <li>1 utente</li>
-                                <li>3 TB di spazio di archiviazione sicuro</li>
+                                <li>
+                                    <span>
+                                        <img src="https://cfl.dropboxstatic.com/static/images/business/bermuda/icons/team.svg" alt="">
+                                    </span>
+                                    1 utente
+                                </li>
+                                <li>
+                                    <span>
+                                        <img src="https://cfl.dropboxstatic.com/static/images/business/bermuda/icons/chat-bubble.svg" alt="">
+                                    </span>
+                                    3 TB di spazio di archiviazione sicuro
+                                </li>
                                 <li><span>&#x270E;</span> Funzioni di produttività premium e condivisione file semplice e sicura</li>
                             </ul>
                         </div>
 
                         <div class="test-days">
-                            <button class="button free-test days-30">Prova gratis per 30 giorni</button>
+                            <a href=""><button class="button free-test days-30">Prova gratis per 30 giorni</button></a>
                             <span>oppure <a href="">acquista ora</a></span>
                         </div>
                         <hr>
@@ -158,7 +180,6 @@
                             </ul>
                         </div>
                     </div>
-
                 </div>
             </div>
 
@@ -167,7 +188,8 @@
             <div class="section rt fl" >
                 <div class="itemp">
                     <div class="team intern">
-                        <h4>Team</h4>
+                        <img src="https://cfl.dropboxstatic.com/static/images/business/bermuda/icons/black-star.svg" alt="">
+                        <span>Team</span>
                     </div>
 
                     <div class="contenuto">
@@ -180,14 +202,24 @@
 
                         <div>
                             <ul class="price">                                                       
-                                <li>1 utente</li>
-                                <li>3 TB di spazio di archiviazione sicuro</li>
+                                <li>
+                                    <span>
+                                        <img src="https://cfl.dropboxstatic.com/static/images/business/bermuda/icons/team.svg" alt="">
+                                    </span>
+                                    1 utente
+                                </li>
+                                <li>
+                                    <span>
+                                        <img src="https://cfl.dropboxstatic.com/static/images/business/bermuda/icons/chat-bubble.svg" alt="">
+                                    </span>
+                                    3 TB di spazio di archiviazione sicuro
+                                </li>
                                 <li><span>&#x270E;</span> Funzioni di produttività premium e condivisione file semplice e sicura</li>
                             </ul>
                         </div>
 
                         <div class="test-days">
-                            <button class="button free-test days-30">Prova gratis per 30 giorni</button>
+                            <a href=""><button class="button free-test days-30">Prova gratis per 30 giorni</button></a>
                             <span>oppure <a href="">acquista ora</a></span>
                         </div>
                         <hr>
@@ -221,7 +253,7 @@
                     </div>
 
                     <div class="voices r fl">
-                        <button class="office-contact ">Contatta l'ufficio vendita</button>
+                        <a href=""><button class="office-contact ">Contatta l'ufficio vendita</button></a>
                     </div>                    
                 </div>
             </div>
@@ -238,7 +270,7 @@
                 <div>
                     <h2>Entra in contatto con un partner Dropbox</h2>
                     <p>Trova un partner Dropbox Finalmente tutti i tuoi strumenti,contenuti e collaboratori sono accessibili dallo stesso posto.Dropbox Business è molto più di un semplice spazio per l’archiviazione sicura dei</p>
-                    <button class="partner-search">Trova un partner</button>
+                    <a href=""><button class="partner-search">Trova un partner</button></a>
                 </div>
             </div>
         </div>
@@ -320,7 +352,7 @@
         </div>
 
 
-        <!-- Box Grid colored floats -->
+        <!-- Box Grid colored floats university -->
         <div class="box-griglia clearfix">
 
             <div class="square-logo fl clearfix">
@@ -397,7 +429,7 @@
                 </div>
 
                 <div class="azienda-part two  fl">
-                    <a href=""><button>Iniza la tua prova gratuita</button></a>
+                    <a href="#"><button>Iniza la tua prova gratuita</button></a>
                 </div>
             </div>
         </div>
@@ -405,7 +437,9 @@
 
         <!--  -->
         <div class="box dropbox questions">
-            <div class="questions-title"><h2>Domande frequenti</h2></div>
+            <div class="questions-title">
+                <h2>Domande frequenti</h2>
+            </div>
             <div class="questions-line">Quanto spazio riceve il mio team?</div>
             <div class="questions-line">Quanto spazio riceve il mio team?</div>
             <div class="questions-line">Quanto spazio riceve il mio team?</div>
@@ -420,53 +454,53 @@
                 <div class="bottom-menu column fl">
                     <h3>Dropbox</h3>
                     <ul class="column-list">
-                        <li>Applicazione desktop</li>
-                        <li>App mobili</li>
-                        <li>Piani</li>
-                        <li>Sicurezza</li>
-                        <li>Funzioni</li>
+                        <li><a href="">Applicazione desktop</a></li>
+                        <li><a href="">App mobili</a></li>
+                        <li><a href="">Piani</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Funzioni</a></li>
                     </ul>
                 </div>
 
                 <div class="bottom-menu column fl">
                     <h3>Azienda</h3>
                     <ul class="column-list">
-                        <li>Informazioni su Dropbox</li>
-                        <li>Lavora con noi</li>
-                        <li>Dicono di noi</li>
-                        <li>Relazioni con gli investitori</li>
-                        <li>Blog</li>
+                        <li><a href="">Informazioni su Dropbox</a></li>
+                        <li><a href="">Lavora con noi</a></li>
+                        <li><a href="">Dicono di noi</a></li>
+                        <li><a href="">Relazioni con gli investitori</a></li>
+                        <li><a href="">Blog<a href=""></a></li>
                     </ul>
                 </div>
 
                 <div class="bottom-menu column fl">
                     <h3>Supporto</h3>
                     <ul class="column-list">
-                        <li>Centro assistenza</li>
-                        <li>Contattaci</li>
-                        <li>Cookie</li>
-                        <li>Privacy e Termini</li>
-                        <li>Mappa del sito</li>
+                        <li><a href="">Centro assistenza</a></li>
+                        <li><a href="">Contattaci</a></li>
+                        <li><a href="">Cookie</a></li>
+                        <li><a href="">Privacy e Termini</a></li>
+                        <li><a href="">Mappa del sito</a></li>
                     </ul>
                 </div>
 
                 <div class="bottom-menu column fl">
                     <h3>Community</h3>
                     <ul class="column-list">
-                        <li>Sviluppatori</li>
-                        <li>Referral</li>
-                        <li>Forum</li>
+                        <li><a href="">Sviluppatori</a></li>
+                        <li><a href="">Referral</a></li>
+                        <li><a href="">Forum</a></li>
                     </ul>
                 </div>
 
                 <div class="bottom-menu column fl">
                     <h3>Prodotti</h3>
                     <ul class="column-list">
-                        <li>Plus</li>
-                        <li>Family</li>
-                        <li>Professional</li>
-                        <li>Dropbox Enterprise</li>
-                        <li>Dropbox Professional</li>
+                        <li><a href="">Plus</a></li>
+                        <li><a href="">Family</a></li>
+                        <li><a href="">Professional</a></li>
+                        <li><a href="">Dropbox Enterprise</a></li>
+                        <li><a href="">Dropbox Professional</a></li>
                     </ul>
                 </div>
 
